--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@600&display=swap" rel="stylesheet">
+<meta content="KANYE WEST 2024" property="og:title" />
+<meta content="FAN CLUB YE" property="og:description" />
+<meta content="http://kanyewest.eu/" property="og:url" />
+<meta content="#43B581" data-react-helmet="true" name="theme-color" />
 
+	
 
 </head>
 <body>
