--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <meta content="http://kanyewest.eu/" property="og:url" />
 <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 
-	
+
 
 </head>
 <body>
 
 <div id="header">
 
-<img class="gif-sunglas" src="/img/ggfaja.gif">
+<img class="gif-sunglas" src="img/ggfaja.gif">
 <p class="heading">fani kanyego westa w powiacie starachowickim&nbsp;</p>
-<img class="gif-sunglas" src="/img/ggfaja.gif">
+<img class="gif-sunglas" src="img/ggfaja.gif">
 </div>
 
 <div id="buttony">
@@ -40,7 +40,7 @@
 
 <div id="menu">
 <h1>Menu</h1>
-<ul>
+<ul id="listamenu">
 <li>kurwa mac</li>
 <li>kurwamac2</li>
 </ul>
@@ -50,6 +50,6 @@
 	<h1>Kanye West krol murzynskiego rapu </h1>
 
 </div>
-
+<script src="./oneko.js"></script>
 </body>
 </html>
