redirect to home page on header

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 </head>
 <body>
 
-<div id="header">
+<a href="https://www.kanyewest.eu/"><div id="header">
 
 <img class="gif-sunglas" src="img/ggfaja.gif">
 <p class="heading">fani kanyego westa w powiacie starachowickim&nbsp;</p>
 <img class="gif-sunglas" src="img/ggfaja.gif">
-</div>
+</div></a>
 
 <div id="buttony">
 	<img class="buton" src="https://anlucas.neocities.org/site_best_viewed_with_monitor.gif">
