--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <div id="menu">
 <h1>Menu</h1>
 <ul id="listamenu">
+<li>Działa na amd e1-2100</li>
 <li>kurwa mac</li>
-<li>kurwamac2</li>
 <li>jebac pawlika</li>
 </ul>
 </div>
