--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 </head>
 <body>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2114926140630519"
+     crossorigin="anonymous"></script>
 <a href="https://www.kanyewest.eu/"><div id="header">
 
 <img class="gif-sunglas" src="img/ggfaja.gif">
