--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 <h1>Menu</h1>
 <ul id="listamenu">
 <li>Działa na amd e1-2100</li>
-<li>kurwa mac</li>
-<li>jebac pawlika</li>
+<li>:D</li>
+<li>:D</li>
 </ul>
 </div>
 
 <div id="body">
-	<h1>Kanye West krol murzynskiego rapu </h1>
+	<h1>Strona poświęcona artyście Kanye "ye" West </h1>
 
 </div>
 <script src="./oneko.js"></script>
