--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 <img class="gif-sunglas" src="img/ggfaja.gif">
-<p class="heading">fani kanyego westa w powiacie starachowickim&nbsp;</p>
+<p class="heading">fani kanyego westa w starachowicach/zamosciu&nbsp;</p>
 <img class="gif-sunglas" src="img/ggfaja.gif">
 </div></a>
 
