--- a/index.html
+++ b/index.html
@@ -49,8 +49,12 @@
 </div>
 
 <div id="body">
-	<h1>Strona poświęcona artyście Kanye "ye" West </h1>
+	<h1>Strona poświęcona artyście Kanye "ye" West </h1> <br><br>
 
+        <a class="smieszne" href="https://kanyewest.eu/" onmouseover='zmiana.src="img/1.png"' 
+        onmouseout='zmiana.src="img/2.png"' onmousedown='zmiana.src="img/3.png"'>
+        <img src="img/4.png" name="zmiana">
+    </a>
 </div>
 <script src="./oneko.js"></script>
 </body>
