--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 
 </head>
 <body>
-
+<div id="app"></div>
+<script src="https://unpkg.com/webamp"></script>
+<script>
+    const app = document.getElementById("app")
+    const webamp = new Webamp();
+    webamp.renderWhenReady(app);
+</script>
 
 <img class="gif-sunglas" src="img/ggfaja.gif">
 <p class="heading">fani kanyego westa w starachowicach/zamosciu&nbsp;</p>
