--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     // NOTE: Your audio file must be served from the same domain as your HTML
                     // file, or served with permissive CORS HTTP headers:
                     // https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS
-                    url: "https://cdn.discordapp.com/attachments/823309032768536586/1181285166434488430/Black_Skinhead.mp3?ex=6580808a&is=656e0b8a&hm=80d31db62dc79b53d75978e156f5c1059ff1057066bb8842abe8bcd5a77cff0b&",
-                    duration: 5.322286
+                    url: "https://www.kanyewest.eu/Black%20Skinhead.mp3",
+                    duration: 183
                 },
                 {
                     metaData: {
