--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 </head>
 <body>
-
+ <div id="app" style="height: 1vh">
+        <!-- Webamp will attempt to center itself within this div -->
+    </div>
     <script src="https://unpkg.com/webamp@1.4.2/built/webamp.bundle.min.js"></script>
     <script>
         const Webamp = window.Webamp;
