--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>fanclub kanyego westa w starachowicach :D</title>
   <meta charset="UTF-8"> 
   <link rel="stylesheet" href="style.css">
-
+<link rel="stylesheet" type="text/css" href="taskbar.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@600&display=swap" rel="stylesheet">
@@ -53,6 +53,39 @@
         webamp.renderWhenReady(document.getElementById('app'));
     </script>
 
+	<div id="win_taskbar">
+		<!-- Start Button -->
+		<div id="win_start_button">
+			<img src="system/icons/start.png" id="win_start_icon" alt="Windows Logo">
+			<span id="win_start_text">Start</span>
+		</div>
+		<!-- Taskbar Buttons -->
+		<div id="win_tb_placeholder">
+		
+		</div><!-- This is here to provide a target for the taskbar addition function -->
+		<!--<div class="win_tb_button win_tb_button_inactive" id="win_tb_win_1">
+			<div class="win_tb_icon">
+				<img src="system/icons/start.png">
+			</div>
+			<div class="win_tb_text">
+				Inactive Window
+			</div>
+		</div>
+		<div class="win_tb_button win_tb_button_active" id="win_tb_win_2">
+			<div class="win_tb_icon">
+				<img src="system/icons/start.png">
+			</div>
+			<div class="win_tb_text">
+				Active Window
+			</div>
+		</div>-->
+		
+		<!-- System Tray -->
+		<div id="win_systray">
+			<span id="win_clock">&nbsp;</span>
+		</div>
+	</div>
+	
 <img class="gif-sunglas" src="img/ggfaja.gif">
 <p class="heading">fani kanyego westa w starachowicach/zamosciu&nbsp;</p>
 <img class="gif-sunglas" src="img/ggfaja.gif">
