--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <a href="https://www.kanyewest.eu/"><div id="header">
 
 </head>
-<body>
+<body onload="updateClock(); setInterval('updateClock()', 1000 );
+	makeWindow('system/icons/start.png', 'Test1', 'tests/iframe.htm', true);">
  <div id="app" style="height: 1vh">
         <!-- Webamp will attempt to center itself within this div -->
     </div>
