--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 <a href="https://www.kanyewest.eu/"><div id="header">
 
 </head>
-<body onload="updateClock(); setInterval('updateClock()', 1000 );
-	makeWindow('system/icons/start.png', 'Test1', 'tests/iframe.htm', true);">
+<body>
  <div id="app" style="height: 1vh">
         <!-- Webamp will attempt to center itself within this div -->
     </div>
@@ -54,39 +53,7 @@
         webamp.renderWhenReady(document.getElementById('app'));
     </script>
 
-	<div id="win_taskbar">
-		<!-- Start Button -->
-		<div id="win_start_button">
-			<img src="system/icons/start.png" id="win_start_icon" alt="Windows Logo">
-			<span id="win_start_text">Start</span>
-		</div>
-		<!-- Taskbar Buttons -->
-		<div id="win_tb_placeholder">
-		
-		</div><!-- This is here to provide a target for the taskbar addition function -->
-		<!--<div class="win_tb_button win_tb_button_inactive" id="win_tb_win_1">
-			<div class="win_tb_icon">
-				<img src="system/icons/start.png">
-			</div>
-			<div class="win_tb_text">
-				Inactive Window
-			</div>
-		</div>
-		<div class="win_tb_button win_tb_button_active" id="win_tb_win_2">
-			<div class="win_tb_icon">
-				<img src="system/icons/start.png">
-			</div>
-			<div class="win_tb_text">
-				Active Window
-			</div>
-		</div>-->
-		
-		<!-- System Tray -->
-		<div id="win_systray">
-			<span id="win_clock">&nbsp;</span>
-		</div>
-	</div>
-	
+
 <img class="gif-sunglas" src="img/ggfaja.gif">
 <p class="heading">fani kanyego westa w starachowicach/zamosciu&nbsp;</p>
 <img class="gif-sunglas" src="img/ggfaja.gif">
