--- a/grawideo.html
+++ b/grawideo.html
@@ -9,11 +9,39 @@
     <title>Maze 95 JS</title>
   </head>
   <body>
-    <!--script>
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/sw.js')
-      }
-    </script-->
+ <div id="app" style="height: 1vh">
+        <!-- Webamp will attempt to center itself within this div -->
+    </div>
+    <script src="https://unpkg.com/webamp@1.4.2/built/webamp.bundle.min.js"></script>
+    <script>
+        const Webamp = window.Webamp;
+        const webamp = new Webamp({
+            initialTracks: [
+                {
+                    metaData: {
+                        artist: "Kanye West",
+                        title: "BLKKKKKK SKIN HEAD"
+                    },
+                    // NOTE: Your audio file must be served from the same domain as your HTML
+                    // file, or served with permissive CORS HTTP headers:
+                    // https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS
+                    url: "https://www.kanyewest.eu/Black%20Skinhead.mp3",
+                    duration: 183
+                },
+                {
+                    metaData: {
+                        artist: "Some Artist",
+                        title: "Title of Second Track"
+                    },
+                    url: "https://cdn.jsdelivr.net/gh/captbaritone/webamp@43434d82cfe0e37286dbbe0666072dc3190a83bc/mp3/llama-2.91.mp3",
+                    duration: 5.322286
+                }
+            ],
+        });
+
+        // Returns a promise indicating when it's done loading.
+        webamp.renderWhenReady(document.getElementById('app'));
+    </script>
     <canvas id="game"></canvas>
   </body>
 </html>
