--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
         <img src="img/4.png" name="zmiana">
     </a>
 
-	<a href="https://www.kanyewest.eu/grawideo.html" src="https://github.com/starachowice/starachowice.github.io/blob/main/textures/icons/apple-icon-180.png?raw=true">
+	<a href="https://www.kanyewest.eu/grawideo.html" class="myButton">ZAGRAJ W GRE WIDEO</a>
+
+	<a href="https://twitter.com/drt_van" class="myButton1">zamosc</a>
+	<a href="https://twitter.com/koroer" class="myButton">starachowice</a>
 </div>
 <script src="./oneko.js"></script>
 </body>
