--- a/index.html
+++ b/index.html
@@ -93,9 +93,17 @@
 	<a href="https://twitter.com/drt_van" class="myButton1">zamosc</a>
 	<a href="https://twitter.com/koroer" class="myButton">starachowice</a>
 
+
+</div>
+
+	<div id="body">
+
+
 	<img src="https://5.allegroimg.com/s1024/0c38ad/48f0769f4f5db6fb894bfbe44625">
 	maszyna faxowa
-</div>
+
+
+	</div>
 <script src="./oneko.js"></script>
 </body>
 </html>
